@@ -326,6 +326,10 @@ Working version
 - #11824: Fix a crash when calling `ocamlrun -b`
   (Florian Angeletti, review by Sébastien Hinderer)
 
+- #11815: Marshalling continuations raises invalid argument exception.
+  (Jérôme Vouillon, review by Nicolás Ojeda Bär, Stephen Dolan and
+   Hugo Heuzard)
+
 OCaml 5.0
 ---------
 
